--- a/.env.example
+++ b/.env.example
@@ -51,10 +51,13 @@ MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_USERNAME=${api-mailjet}
+MAIL_PASSWORD=${apisecret-mailjet}
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=${correo-mailjet}
 MAIL_FROM_NAME="${APP_NAME}"
+MAILJET_APIKEY=${api-mailjet}
+MAILJET_APISECRET=${apisecret-mailjet}
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
