--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,11 @@ MAIL_FROM_NAME="${APP_NAME}"
 MAILJET_APIKEY=${api-mailjet}
 MAILJET_APISECRET=${apisecret-mailjet}
 
+TWILIO_SID=${twilio_sid}
+TWILIO_AUTH_TOKEN=${twilio_auth_token}
+TWILIO_PHONE=${wilio_phone_number}
+
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
